--- a/home/templates/home/contact_form.html
+++ b/home/templates/home/contact_form.html
@@ -22,7 +22,7 @@
 
         <div class="row justify-content-center align-items-center">
 
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-lg-7 px-0">
 
                 <form method="post" action="{% url 'contact' %}" class="contact-form-width-control">
                     {% csrf_token %}
@@ -54,11 +54,11 @@
                     <div class="form-group">
                         <label for="id_comment">Comment:</label>
                         <textarea class="form-control" placeholder="Enter your comment" name="{{ form.comment.name }}"
-                            id="{{ form.comment.id_for_label }}"></textarea>
+                            id="{{ form.comment.id_for_label }}" rows="6"></textarea>
                     </div>
 
                     <div class="text-center">
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center pt-3">
                             <a class="rating-button btn rounded-2 text-uppercase mb-5 mr-3"
                                 href="{% url 'products' %}">Cancel</a>
                             <button class="rating-button btn rounded-2 text-uppercase mb-5"
