--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -58,7 +58,7 @@
 
                     <!-- Details tab -->
                     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12">
                             <div class="product-details-container mt-2 md-5">
                                 <h3 class="mb-3">{{ product.name }}</h3>
                                 <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
@@ -83,7 +83,7 @@
                                         <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                     </small>
                                 {% endif %}
-                                <p class="mt-2">{{ product.description }}</p>
+                                <p class="mt-3">{{ product.description }}</p>
                                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                                     {% csrf_token %}
                                     <div class="form-row">
