--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,4 +4,5 @@
   <a class="dropdown-item"
     href="{% url 'category_products' category_id=category.id %}">{{ category.get_friendly_name }}</a>
   {% endfor %}
+  <a class="dropdown-item" href="{% url 'products' %}">All Products</a>
 </div>
