--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -35,6 +35,7 @@
                         </tr>
                     </thead>
 
+                    <!-- iterate over bag items -->
                     {% for item in bag_items %}
                     <tr class="table-style">
                         <td class="py-3 w-25 hide-img">
@@ -95,6 +96,7 @@
                         </td>
                     </tr>
                     <tr>
+                        <!-- submit and back buttons with syntax logic -->
                         <td colspan="5" class="text-right">
                             {% if request.META.HTTP_REFERER %}
                             <a href="{{ request.META.HTTP_REFERER }}"
