--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 {% for item in bag_items %}
-                    <!-- small screens -->
+                    <!-- small screens image column removed -->
                     <div class="row d-sm-none">
                         <div class="col-9 mb-1">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
@@ -115,7 +115,7 @@
                     </fieldset>
                     <fieldset class="px-3">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
-                        <!-- A Stripe card element will go here -->
+                        <!-- A Stripe card element here -->
                         <div class="mb-3" id="card-element"></div>
                         <!-- Used to display form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
