--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,6 +15,7 @@
 
 {% block content %}
     <div class="overlay"></div>
+    <!-- CONTAINER TO DISPLAY ORDER DETAILS -->
     <div class="container text-center">
         <div class="row">
             <div class="col hr-prod-spacer">
