home app annotation

--- a/home/templates/home/contact_form.html
+++ b/home/templates/home/contact_form.html
@@ -24,6 +24,7 @@
 
             <div class="col-12 col-lg-7 px-0">
 
+                <!-- Form to handle contact message submission -->
                 <form method="post" action="{% url 'contact' %}" class="contact-form-width-control">
                     {% csrf_token %}
 
