--- a/home/templates/home/contact_form_management.html
+++ b/home/templates/home/contact_form_management.html
@@ -23,6 +23,7 @@
     <div class="row mb-5">
         <div class="container-fluid">
             <div class="card-container cmt-card-container">
+                <!-- Display all messages as cards in a column & row layout -->
                 {% for contact_form in contact_forms %}
                 <div class="card cmt-card">
                     <div class="card-body cmt-card-body contact-message-card text-left">
