--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -21,6 +21,7 @@
             </div>
         </div>
 
+        <!-- render form to edit new products -->
         <div class="row mb-5">
             <div class="col-12 col-md-6 mb-5">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
