--- a/templates/base.html
+++ b/templates/base.html
@@ -202,7 +202,17 @@
     <div class="row">
       <div class="col text-center py-3">
         <!-- Footer content goes here -->
-        <p>This is the footer</p>
+        <p class="font-weight-bold">
+          &copy; 2023 Bull &amp; Sea
+          <span class="footer-icons">
+            <a href="https://www.facebook.com/bullandsea/" target="_blank">
+              <i class="pl-3 fab fa-facebook fa-lg"></i>
+            </a>
+            <a href="https://www.pinterest.ie/rooinstheninth/_created" target="_blank">
+              <i class="pl-3 fab fa-pinterest fa-lg"></i>
+            </a>
+          </span>
+        </p>
       </div>
     </div>
   </footer>
