form validation and horizontal scroll bug fix

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,7 +32,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
             <!-- sorting element -->
-            <form method="get" action="" class="d-flex justify-content-center sort-field">
+            <form method="get" class="d-flex justify-content-center sort-field">
                 <div class="d-flex">
                     <select name="sort" id="sort-selector"
                         class="custom-select custom-select-sm rounded-0 border border-grey rounded-2 bg-searchbox">
