--- a/home/templates/home/contact_form_management.html
+++ b/home/templates/home/contact_form_management.html
@@ -11,6 +11,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid px-0 text-center">
+    <div class="form-management-container">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 hr-prod-spacer">
             <hr class="pt-2">
@@ -45,6 +46,7 @@
                 {% endfor %}
             </div>
         </div>
+    </div>
     </div>
 </div>
 {% endblock %}
