style newsletter and splashtext

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,9 @@
     <div class="row h-100 align-items-start">
         <div class="col-7 col-md-6 d-flex flex-column justify-content-start">
             <h1 class="splash-text">
-                Artisan candles and lifestyle products
+                Welcome to our online store! We make our candles with love and care. 
+                Don't forget to visit our Facebook page for the latest updates and exclusive offers. 
+                All our ingredients are responsibly sourced and good to the planet.
             </h1>
             <div class="my-5">
                 <h5>
