tidy up messages and style tweaks

--- a/home/templates/home/contact_form.html
+++ b/home/templates/home/contact_form.html
@@ -16,6 +16,7 @@
             <hr>
             <h2 class="logo-font sub-header2-font">Contact Us</h2>
             <h5 class="text-muted pt-2">For all customer and business-to-business enquiries</h5>
+            <h6 class="text-muted pt-2">Drop us a line and let us know what you think or reach out if you are interested in reselling our products!</h6>
             <hr class="mb-2">
         </div>
     </div>
