--- a/home/templates/home/signup.html
+++ b/home/templates/home/signup.html
@@ -19,7 +19,7 @@
                 <div class="card-header text-uppercase">
                     <h5>Signup to our Newsletter !!</h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body signup-card-body">
                     <form method="post" class="signup-form-element">
                         {% csrf_token %}
                         {{ form.as_p }}
@@ -34,7 +34,7 @@
                 <div class="card-header text-uppercase">
                     <h5>Ts & Cs:</h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body signup-card-body">
                     <ul class="tandcs-list list-group">
                         <li class="list-group-item">By signing up for our newsletter, you agree to receive periodic
                             email
