--- a/home/templates/home/contact_form_management.html
+++ b/home/templates/home/contact_form_management.html
@@ -15,8 +15,8 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 hr-prod-spacer">
             <hr class="pt-2">
-            <h2 class="logo-font sub-header2-font">Contact Messages</h2>
-            <h5 class="text-muted pt-2">Customer and business enquiries requiring attention</h5>
+            <h2 class="logo-font sub-header2-font mb-4">Contact Messages</h2>
+            <h5 class="text-muted pt-2">Customer and Business-to-Business enquiries requiring attention</h5>
             <hr class="mb-2">
         </div>
     </div>
