--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,10 +10,11 @@ html {
 .splash-text {
     padding: 200px 0 0 8px;
     font-size: 1.3rem;
+    font-weight: 500;
     color: #383838 !important;
     line-height: 1.1;
-    text-shadow: 0 0 3px #f5f0ecab;
 }
+
 
 .bg-nav {
     background-color: #DCDBDC;
@@ -259,6 +260,11 @@ body {
 
 /* signup newsletter form */
 
+.tandcs-card .signup-card-body,
+.signup-card .signup-card-body {
+    background-color: #f5f0ec !important;
+}
+
 .signup-form-element ul {
     list-style-type: none;
     font-size: large;
@@ -282,8 +288,9 @@ body {
 }
 
 .tandcs-list .list-group-item {
+    background-color: #ffffffab;
     font-size: small;
-    padding: 2px 5px;
+    padding: 5px 5px;
 }
 
 /* products css */
@@ -710,7 +717,7 @@ tr.table-style .sku-text {
 /* medium styles */
 @media (max-width: 992px) {
     .splash-text {
-        padding: 300px 0 0 10px;
+        padding: 100px 0 0 10px;
     }
 
     .navbar-brand {
