--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,13 +14,13 @@
     <div class="row h-100 align-items-start">
         <div class="col-7 col-md-6 d-flex flex-column justify-content-start">
             <h1 class="splash-text">
-                Welcome to our online store! We make our candles with love and care. 
+                Welcome to our online store! We make our <strong>100% rapeseed wax candles</strong> with love and care. 
                 Don't forget to visit our Facebook page for the latest updates and exclusive offers. 
-                All our ingredients are responsibly sourced and good to the planet.
+                All our ingredients are <strong>responsibly sourced</strong> and good to the planet.
             </h1>
             <div class="my-5">
                 <h5>
-                    <a href="{% url 'category_products' category_id=1 %}" class="call-to-action-button btn rounded-2 text-uppercase">Discover our candles...</a>
+                    <a href="{% url 'category_products' category_id=1 %}" class="call-to-action-button btn rounded-2 text-uppercase"><strong>Discover our candles...</strong></a>
                 </h5>
                 <h5>
                     <a href="{% url 'signup' %}" class="call-to-action-button btn rounded-2 text-uppercase mt-2">Sign up to our newsletter</a>
